cncProd/force-app/main/default/objects/General_Enquiry__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>General Enquiries</relationshipLabel>
    <relationshipName>General_Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>