cncProd/force-app/main/default/objects/General_Enquiry__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>1250</length>
    <type>LongTextArea</type>
</CustomField>