cncProd/force-app/main/default/objects/General_Enquiry__c/fields/Person_Account_Profiling__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Profiling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person Account Profiling</label>
    <referenceTo>Person_Account_Profiling__c</referenceTo>
    <relationshipLabel>General Enquiries</relationshipLabel>
    <relationshipName>General_Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>